styles/utils.module.css
.heading2Xl {
  font-size: 3rem;
  line-height: 1.2;
  font-weight: 800;
  letter-spacing: -0.05rem;
  margin-top: 0.7rem;
  margin-bottom: 1rem;
  color: #222222;
}

.TEST {
  font-size: 3rem;
  line-height: 1.2;
  font-weight: 800;
  letter-spacing: -0.05rem;
  margin-top: 0.7rem;
  margin-bottom: 1rem;
  color: #222222;
}

.headingXl {
  font-size: 2.5rem;
  line-height: 1.3;
  font-weight: 800;
  letter-spacing: -0.05rem;
  color: #222222;
  margin: 1rem 0;
}

.headingPostTitle {
  color: #222222;
  font-size: 2.5rem;
  line-height: 1.3;
  font-weight: 800;
  letter-spacing: -0.05rem;
}

.headingAbout {
  font-size: 2rem;
  line-height: 1.4;
  margin-bottom: 0px;
  margin-top: -1.2rem;
}

.headingLg {
  font-size: 2rem;
  line-height: 1.4;
  margin: 0px 0px;
}

.headingMd {
  font-size: 1.6rem;
  line-height: 1.5;
}

.headingDd {
  font-size: 1.2rem;
  line-height: 1.5;
  font-weight: bold;
}

.borderCircle {
  border-radius: 9999px;
}

.colorInherit {
  color: inherit;
}

.padding1px {
  padding-top: 1px;
}

.list {
  list-style: none;
  padding: 0;
  margin: 0;
}

.link {
  margin-left: 20px;
}

.listItem {
  margin: 0 0 1.25rem;
}

.lightText {
  color: #666;
  margin-top: -5px;
}

.introSection {
  padding: 2rem;
  background-color: #fff;
  border-radius: 8px;
  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
}

.introSectionAllPosts {
  padding-top: 1rem;
  padding-left: 2rem;
  padding-right: 2rem;
  padding-bottom: 1rem;
  background-color: #fff;
  border-radius: 8px;
  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
}

.introText {
  margin: 0px 0px;
  font-size: 1.5rem;
}

.socialLinks {
  margin: 0px 0px;
  font-size: 25px;
}

.showlinksBorder {
    font-weight: 500;
    font-size: 25px;
    border: 2px solid #0070f3;
    padding: 0px 8px;
    border-radius: 5px;
    transition: background-color 0.3s, color 0.3s, border-color 0.3s; /* Add smooth transitions for color, background, and border */
    display: inline-block; /* Make it a block-level element */
    text-align: center; /* Center the text horizontally */
    width: auto; /* Let the button adjust its width based on content */
    background-color: transparent; /* Make the background transparent by default */
    color: #0070f3; /* Set the default text color */
    text-decoration: none;
}

.showlinksBorder:hover {
    color: #fff; /* Change the text color on hover */
    background-color: #0070f3; /* Fill the button with a background color on hover */
    border-color: #0070f3; /* Change the border color on hover */
}

.showlinksBorder:focus {
    outline: none; /* Remove the focus outline */
}

.link {
  display: inline-block;
  margin-right: 20px;
  color: #0070f3;
  text-decoration: none;
}

.link:hover {
  text-decoration: underline;
}

/*
.blogSection {
  margin-top: 2rem;
}
*/

.postList {
  list-style: none;
  padding: 0;
}

.postItem {
  margin-bottom: 0px;
}

.postLink {
  text-decoration: none;
  color: #333;
  font-weight: 600;
}
.postLinkH1 {
  color: #333;
  text-decoration: none;
}

.postLink:hover {
  text-decoration: underline;
}

.postDate {
  color: #666;
}

.footer {
  color: #666;
  text-align: center;
  font-size: 0.8rem;
  margin-bottom: -1.65rem;
}

.content {
  font-size: 1.2rem;
  line-height: 1.6;
  color: #333;
}

.latestPostContainer {
    margin: 0px 0px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.showAllLink {
    text-decoration: none;
    color: #0070f3;
    font-weight: 500;
    font-size: 20px;
    border: 2px solid #0070f3;
    padding: 0px 8px;
    border-radius: 5px;
    transition: background-color 0.3s, color 0.3s, border-color 0.3s; /* Add smooth transitions for color, background, and border */
    display: inline-block; /* Make it a block-level element */
    text-align: center; /* Center the text horizontally */
    width: auto; /* Let the button adjust its width based on content */
    background-color: transparent; /* Make the background transparent by default */
}

.showAllLink:hover {
    color: #fff; /* Change the text color on hover */
    background-color: #0070f3; /* Fill the button with a background color on hover */
    border-color: #0070f3; /* Change the border color on hover */
}

.showAllLink:focus {
    outline: none; /* Remove the focus outline */
}

/* Add this CSS to your stylesheet */
.iconText {
  display: flex;
  align-items: center;
  font-weight: normal; /* Initial font-weight */
  transition: transform 0.3s, color 0.3s; /* Add smooth transitions */
}

.icon {
  font-weight: lighpaddingt; /* Initial font-weight */
  margin-top: 2px;
  margin-right: 10px;
}

.iconText:hover {
  transform: translateX(-10px); /* Adjust the value to move the icon left on hover */
  color: blue; /* Adjust the color change on hover as desired */
}

.searchInput {
    width: 571.9px; /* Adjust the width as needed */
    padding: 5px;
    margin-left: 20px; /* Add margin to create spacing */
    border: 2px solid #ccc;
    border-radius: 10px;
    font-size: 18px;
}

/* Style for input on focus (optional) */
.searchInput:focus {
    outline: none; /* Remove the default focus outline */
    border-color: #0070f3; /* Change the border color when focused */
    box-shadow: 0 0 5px rgba(0, 112, 243, 0.5); /* Add a subtle box shadow when focused */
}

/* Add this CSS to your stylesheet */
.headingWithSearch {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.SoftBorderAroundAbout {
    border: 2px dashed #d3d3d3;
    padding: 0px 8px;
    border-radius: 5px;
    width: auto;
    background-color: #f0f0f0;
    text-decoration: none;
}

.SoftBorderAroundLatestPost {
    border: 2px dashed #d3d3d3;
    padding: 0px 8px;
    border-radius: 5px;
    width: auto;
    background-color: #f0f0f0;
    text-decoration: none;
    transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
}

.SoftBorderAroundLatestPost:hover {
    transform: scale(1.02); /* Scale up the element on hover */
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Add a subtle box shadow on hover */
}

.SoftBorderAroundAllPost {
    margin-bottom: 10px;
    border: 2px dashed #d3d3d3;
    padding: 0px 8px;
    border-radius: 5px;
    width: auto;
    background-color: #f0f0f0;
    text-decoration: none;
    transition: transform 0.1s ease-in-out, box-shadow 0.1s ease-in-out;
}

.SoftBorderAroundAllPost:hover {
    transform: scale(1.02); /* Scale up the element on hover */
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Add a subtle box shadow on hover */
}

